# ai-ml-workshop

./: .gitignore  AGENTS.md  LESSONS.md  README.md  USERGUIDE.md  project_1_classifier.md  project_2_rag.md  project_3_llm.md  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  hooks.py  main.py  models.py  registry.py  ruff.toml  tasks.py  test_backend.py  test_gradients.py
docs/: README.md  dashboard.md  data_pipelines.md  frameworks.md  fundamentals.md  future_focus.md  integrations.md  media_analysis.md  ml_theory.md  model_selection.md  numpy.md  pytorch.md  pytorch_transformers_datasets_learnings.md  rag.md  sklearn.md
examples/numpy/: backpropagation.py
examples/pytorch/: fine_tuning.py  image_classification.py  question_answering.py  tabular_classification.py  text_classification.py  time_series_forecasting.py
examples/sklearn/: kmeans.py  logistic_regression.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: api.ts  constants.ts  globals.css  layout.tsx  page.tsx  theory.ts
learnings/: sklearn.md
numpy/: main.py
playground/: decision_tree.py  knn.py  linear_regression.py  logistic_regression.py  random_forest.py  svm.py
sklearn/: decision_tree.py  kmeans.py  linear_regression.py  pca.py  svm.py
tenflow/: main.py  pyproject.toml
torchi/: fine_tuning.py  image_classification.py  main.py  pyproject.toml  question_answering.py  tabular_classification.py  text_classification.py  time_series_forecasting.py
utils/: __init__.py  data_utils.py  device_utils.py
workshop/: __init__.py  __main__.py  cli.py
(+55 files in other folders)
