[project]
name = "ai-ml-workshop"
version = "0.1.0"
description = "Explore AI and ML concepts with practical examples"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "datasets>=4.4.1",
    "pandas>=2.0.0",
    "peft>=0.18.1",
    "ruff>=0.14.7",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[project.scripts]
workshop = "workshop.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["workshop*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 160

[tool.ruff.lint]
extend-select = ["I"]
